Bug 452181 - singleclick-mode multi-select w/ Ctrl+Left Click is broken
Summary: singleclick-mode multi-select w/ Ctrl+Left Click is broken
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 22.03.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: https://invent.kde.org/system/dolphin...
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-02 14:40 UTC by Andreas Sturmlechner
Modified: 2022-04-04 12:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Sturmlechner 2022-04-02 14:40:35 UTC
Irrespective of how I think about the neglect for singleclick usage by this change, multi-selection using Ctrl is broken.


STEPS TO REPRODUCE
1. select one or more files
2. hold Ctrl and try to select additional files

OBSERVED RESULT

dolphin will perform a file drag operation of the existing selection irrespective if you try to click on additional files or use the click-to-drag workaround that is already (by the linked change) necessary to get focus or deselect single files.

EXPECTED RESULT

be able to add make disjointed multi file selections.


SOFTWARE/OS VERSIONS
Operating System: Gentoo Linux 2.8
KDE Plasma Version: 5.24.3
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.15.30-gentoo (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ m7-6Y75 CPU @ 1.20GHz
Memory: 7,2 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 515
Comment 1 Phos 2022-04-02 15:31:15 UTC
Hmm, I cant reproduce. Ctrl multi selection in dolphin in single click mode works as expected.

Operating System: Arch Linux
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.17.1-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-8750H CPU @ 2.20GHz
Memory: 31.1 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Comment 2 Felix Ernst 2022-04-02 20:36:46 UTC
I have created a merge request that fixes this bug, if I am understanding it correctly: https://invent.kde.org/system/dolphin/-/merge_requests/369

(Weird that this bug report wasn't notified automatically just by me mentioning it in the commit message like usual.)
Comment 3 Andreas Sturmlechner 2022-04-02 22:00:07 UTC
(In reply to Felix Ernst from comment #2)
> (Weird that this bug report wasn't notified automatically just by me
> mentioning it in the commit message like usual.)

That didn't work for me in the last few bugs either.
Comment 4 Nate Graham 2022-04-03 18:27:45 UTC
Can confirm that. Probably worth a ping to sysadmins or Harald directly, as IIRC he's the one who implemented it.
Comment 5 Felix Ernst 2022-04-04 12:39:41 UTC
Git commit 2de8f4c0fb2141f68400327a4f87eefa71d81e3c by Felix Ernst.
Committed on 04/04/2022 at 12:39.
Pushed by felixernst into branch 'release/22.04'.

Improve details mode ctrl-press rubberband creation

Since d3839617193e92463806580699caa595c892b8a6 dragging the
highlighted row of already selected items in the details view mode
will begin a drag operation of all selected items.

As a unintended side-effect of this change, dragging the row of a
previously unselected item while holding the control key would also
begin a drag operation.

After this commit, dragging the row of a previously unselected item
while holding the control key in details view mode will instead
create a rubberband. Ctrl-dragging the item's icon or text directly will drag the item as expected.

With this change, using multiple rubberbands to select scattered
items among a list of items should be as convenient as it was
previously.

M  +14   -3    src/kitemviews/kitemlistcontroller.cpp

https://invent.kde.org/system/dolphin/commit/2de8f4c0fb2141f68400327a4f87eefa71d81e3c